--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
     background: linear-gradient(135deg, #667eea, #764ba2);
-    color: white;
+    color: rgb(17, 1, 1);
     font-family: Arial, sans-serif;
 }
 
